testing projects section

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+						<h2>Here’s some stuff I worked on recently.</h2>
+						<p>The following projects that represent my experience with programming, 3D design and leadership.</p>
 					</header>
 					<div class="container">
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-									<h3><a href="#">Magna feugiat</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="#" class="image featured"><img src="images/meshMaker01.jpg" alt="" /></a>
+									<h3><a href="#">Mesh Maker</a></h3>
+									<p>Generates triangulated assemblable sculptures</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
