fixed two line description

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/meshMaker01.jpg" alt="" /></a>
 									<h3><a href="#">Mesh Maker</a></h3>
-									<p>Generates triangulated assemblable sculptures</p>
+									<p>Triangulated assemblable sculptures</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
