--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Casey C. Rogers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,13 +31,13 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/hotdog00.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>Casey C. Rogers</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/meshMaker01.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/meshMaker00.jpg" alt="" /></a>
 									<h3><a href="#">Mesh Maker</a></h3>
 									<p>Triangulated assemblable sculptures</p>
 								</article>
