--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1>Hi. I'm <strong>Casey C. Rogers</strong>.</h1>
+								<h1>Hi. I'm <strong>Casey Rogers</strong>.</h1>
 							</header>
 							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
@@ -56,21 +56,21 @@
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-comments-o"></span>
-									<h3>Consequat lorem</h3>
+									<h3>Computer Science</h3>
 									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-camera-retro"></span>
-									<h3>Lorem dolor tempus</h3>
+									<h3>3D Design</h3>
 									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-thumbs-o-up"></span>
-									<h3>Feugiat posuere</h3>
+									<h3>Leadership</h3>
 									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 								</section>
 							</div>
