--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# 
+                  website: http://ogp.me/ns/website#">
+        <meta property="og:title" content="Your awesome site title">
 		<title>Casey C. Rogers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -96,7 +98,7 @@
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/meshMaker00.jpg" alt="" /></a>
 									<h3><a href="#">Mesh Maker</a></h3>
-									<p>Triangulated assemblable sculptures</p>
+									<p>Triangulated scultupre generator</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -192,14 +194,14 @@
 								<hr />
 								<h3>Find me on ...</h3>
 								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://twitter.com/caseycrogers" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/casey.rogers.35" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.linkedin.com/in/caseycrogers" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/caseycrogers" class="icon fa-github"><span class="label">Github</span></a></li>
+									<!--
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									<!--
 									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
 									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
