--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# 
-                  website: http://ogp.me/ns/website#">
-        <meta property="og:title" content="Your awesome site title">
+<html prefix="og: http://ogp.me/ns#">
+	<head>
 		<title>Casey C. Rogers</title>
+        <meta property="og:title" content="Casey C. Rogers">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
