testing open graph2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<title>Casey C. Rogers</title>
         <meta property="og:title" content="Casey C. Rogers">
         <meta property="og:image" content="http://caseycrogers.github.io/images/camera00.jpg">
-		<meta property="og:description" content="I'm a UC Berkeley Computer Science and Economics double major with a passion for creative work and analytical problem solving. Click here to see my work!" />
+		<meta property="og:description" content="I'm a UC Berkeley Computer Science and Economics double major with a passion for creative work and analytical problem solving.
+		Click here to see my work!" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
