Added YourFault to Portfolio

--- a/index.html
+++ b/index.html
@@ -96,32 +96,45 @@
 				<article id="portfolio">
 					<header>
 						<h2>Here’s some stuff I worked on recently.</h2>
-						<p>The following projects that represent my experience with programming, 3D design and leadership.</p>
+						<p>The following are some examples of my experience with programming, 3D design and leadership.</p>
 					</header>
 					<div class="container">
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#meshMakerInline" rel="meshMaker" class="fancybox image featured"><img src="images/meshMaker00-small.jpg" alt="" /></a>
+									<a href="#meshMakerInline" rel="meshMaker" class="fancybox image featured"><img src="images/meshMaker01-small.jpg" alt="" /></a>
 									<div id="meshMakerInline" style="width:500px;height:500px;overflow:auto;display:none;">
-										<h3>Mesh Maker</h3><p><img src="images/meshMaker00.jpg" style="display:none">
+										<h3>Mesh Maker</h3>
+										<a href="https://github.com/caseycrogers/MeshMaker" target="_blank">Github Repository</a><p>
 										Mesh Maker is a ~800 line Python add-in that I wrote for Autodesk Fusion360. It takes in a triangulated 3D object as an .stl file and converts it into a series of small interlocking and 3D printable triangles exported as a series of .stl files. Binary bit patterns embedded into each triangle guide the user through assembly.<p>
 
 										Mesh Maker takes large complex objects with structures challenging to 3D printing and makes them easily printable on a consumer grade FDM machine. The result is both artistic and and funtional for rapid prototyping.</p>
 									</div>
-									<a href="images/meshMaker00.jpg" rel="meshMaker" class="fancybox" style="display:none">test</a>
-									<a href="images/meshMaker01.jpg" rel="meshMaker" class="fancybox" style="display:none">test</a>
-									<a href="images/meshMaker02.jpg" rel="meshMaker" class="fancybox" style="display:none">test</a>
-									<a href="images/meshMaker03.jpg" rel="meshMaker" class="fancybox" style="display:none">test</a>
+									<a href="images/meshMaker00.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Various Manufactured Sculptures-4 to 60 triangles">test</a>
+									<a href="images/meshMaker01.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Rabbit-140 triangles">test</a>
+									<a href="images/meshMaker02.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Rabbit-140 triangles">test</a>
+									<a href="images/meshMaker03.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Triambic Icosahedron-60 triangles">test</a>
+									<a href="images/meshMaker04.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Small Stellated Dodecahedron-60 triangles">test</a>
 									<h3><a href="#">Mesh Maker</a></h3>
 									<p>Triangulated sculpture generator</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<h3><a href="#">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="#yourFaultInline" rel="yourFault" class="fancybox image featured"><img src="images/yourFault00-small.jpg" alt="" /></a>
+									<div id="yourFaultInline" style="width:500px;height:500px;overflow:auto;display:none;">
+										<h3>YourFault</h3>
+										<a href="https://www.hackster.io/caseycrogers/yourfault-app-casey-rogers-00fc42" target="_blank">Hackster Page</a><p>
+										YourFault is an Android Wear and Mobile app that I designed for the "User Interfaces" course at UC Berkeley. The app was designed in Android Studio to match a project specification.<p>
+
+										YourFault's mobile application uses the USGS API to push a notification screen to the Android Wear app when USGS detects an earthquake. The notification displays the earthquake location, magnitude and distance from the user. Tapping on the notification opens, on the mobile app, a Google maps view with a circle representing the mangitude and epicenter of the earthquake.</p>
+
+									</div>
+									<a href="images/yourFault00.jpg" rel="yourFault" class="fancybox" style="display:none" title = "List of Recent Earthquakes">test</a>
+									<a href="images/yourFault01.jpg" rel="yourFault" class="fancybox" style="display:none" title = "Earthquake Map View">test</a>
+									<a href="images/yourFault02.jpg" rel="yourFault" class="fancybox" style="display:none" title = "Earthquake Wear Notification">test</a>
+									<h3><a href="#">YourFault</a></h3>
+									<p>Earthquake Monitoring Android app</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -256,7 +269,7 @@
                 		'titlePosition'     : 'inside',
                 		'transitionIn'      : 'none',
                 		'transitionOut'     : 'none',
-                		'loop'				: false
+                		'loop'				: false,
     				});
 				});
 			</script>
