Added engine, added verbose captions

--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a href="#meshMakerInline" rel="meshMaker" class="fancybox image featured"><img src="images/meshMaker01-small.jpg" alt="" /></a>
-									<div id="meshMakerInline" style="width:500px;height:500px;overflow:auto;display:none;">
+									<div id="meshMakerInline" style="width:500px;height:500px;overflow:no;display:none;">
 										<h3>Mesh Maker</h3>
 										<a href="https://github.com/caseycrogers/MeshMaker" target="_blank">Github Repository</a><p>
 										Mesh Maker is a ~800 line Python add-in that I wrote for Autodesk Fusion360. It takes in a triangulated 3D object as an .stl file and converts it into a series of small interlocking and 3D printable triangles exported as a series of .stl files. Binary bit patterns embedded into each triangle guide the user through assembly.<p>
 
 										Mesh Maker takes large complex objects with structures challenging to 3D printing and makes them easily printable on a consumer grade FDM machine. The result is both artistic and and funtional for rapid prototyping.</p>
 									</div>
-									<a href="images/meshMaker00.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Various Manufactured Sculptures-4 to 60 triangles">test</a>
-									<a href="images/meshMaker01.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Rabbit-140 triangles">test</a>
-									<a href="images/meshMaker02.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Rabbit-140 triangles">test</a>
-									<a href="images/meshMaker03.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Triambic Icosahedron-60 triangles">test</a>
-									<a href="images/meshMaker04.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Small Stellated Dodecahedron-60 triangles">test</a>
+									<a href="images/meshMaker00.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Various Manufactured Sculptures, 3D printed on a Makerbot Replicator 2X-4 to 60 triangles each">test</a>
+									<a href="images/meshMaker01.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Rabbit Render-140 triangles">test</a>
+									<a href="images/meshMaker02.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Rabbit Render-140 triangles">test</a>
+									<a href="images/meshMaker03.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Triambic Icosahedron Render-60 triangles">test</a>
+									<a href="images/meshMaker04.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Small Stellated Dodecahedron Render-60 triangles">test</a>
 									<h3><a href="#">Mesh Maker</a></h3>
 									<p>Triangulated sculpture generator</p>
 								</article>
@@ -122,7 +122,7 @@
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a href="#yourFaultInline" rel="yourFault" class="fancybox image featured"><img src="images/yourFault00-small.jpg" alt="" /></a>
-									<div id="yourFaultInline" style="width:500px;height:500px;overflow:auto;display:none;">
+									<div id="yourFaultInline" style="width:500px;height:500px;overflow:no;display:none;">
 										<h3>YourFault</h3>
 										<a href="https://www.hackster.io/caseycrogers/yourfault-app-casey-rogers-00fc42" target="_blank">Hackster Page</a><p>
 										YourFault is an Android Wear and Mobile app that I designed for the "User Interfaces" course at UC Berkeley. The app was designed in Android Studio to match a project specification.<p>
@@ -148,9 +148,25 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="#engineInline" rel="engine" class="fancybox image featured"><img src="images/engine00-small.jpg" alt="" /></a>
+									<div id="engineInline" style="width:500px;height:500px;overflow:no;display:none;">
+										<h3>Wright J Whirlwind Radial Engine</h3>
+										<a href="https://gallery.autodesk.com/fusion-360/projects/olsryd-9-cylinder-radial-engine" target="_blank">Fusion 360 Gallery Page</a><p>
+										I made this model of the Wright J Whirlwind Engine in collaboration with Daniele Grandi and Carlos Oyuela-Mora for the "Design For Autodesk" program. The model is based off of <a href="JanElgWhilrwindEngineDrawings.pdf" target="_blank">engineering drawings</a> by Jan Elg.<p>
+
+										As the team lead for the project, I:<br/ >
+										Delegated work between the team members<br/ >
+										Modeled and assembled all exterior casing of the engine (excluding rear gearbox casing)<br/ >
+										Designed the interior parts of the cylinders, including the piston assembly, impeller and rocker valves<br/ >
+										</p>
+
+									</div>
+									<a href="images/engine00.jpg" rel="engine" class="fancybox" style="display:none" title = "Back View with closeup on the gearbox casing and the back of the pistons">test</a>
+									<a href="images/engine01.jpg" rel="engine" class="fancybox" style="display:none" title = "Top View showing full engine assembly with stand">test</a>
+									<a href="images/engine02.jpg" rel="engine" class="fancybox" style="display:none" title = "Engine without casing, exposing the fully articulated internals">test</a>
+									<a href="images/engine03.jpg" rel="engine" class="fancybox" style="display:none" title = "Close-up showing internals of the piston assembly">test</a>
+									<h3><a href="#">Engine CAD Model</a></h3>
+									<p>Wright J Whirlwind Radial Engine</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
