--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<a href="images/meshMaker02.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Rabbit Render-140 triangles">test</a>
 									<a href="images/meshMaker03.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Triambic Icosahedron Render-60 triangles">test</a>
 									<a href="images/meshMaker04.jpg" rel="meshMaker" class="fancybox" style="display:none" title = "Fusion 360 Small Stellated Dodecahedron Render-60 triangles">test</a>
-									<h3><a href="#">Mesh Maker</a></h3>
+									<h3><a href="#meshMakerInline" class="fancybox">Mesh Maker</a></h3>
 									<p>Triangulated sculpture generator</p>
 								</article>
 							</div>
@@ -130,10 +130,10 @@
 										YourFault's mobile application uses the USGS API to push a notification screen to the Android Wear app when USGS detects an earthquake. The notification displays the earthquake location, magnitude and distance from the user. Tapping on the notification opens, on the mobile app, a Google maps view with a circle representing the mangitude and epicenter of the earthquake.</p>
 
 									</div>
-									<a href="images/yourFault00.jpg" rel="yourFault" class="fancybox" style="display:none" title = "List of Recent Earthquakes">test</a>
-									<a href="images/yourFault01.jpg" rel="yourFault" class="fancybox" style="display:none" title = "Earthquake Map View">test</a>
-									<a href="images/yourFault02.jpg" rel="yourFault" class="fancybox" style="display:none" title = "Earthquake Wear Notification">test</a>
-									<h3><a href="#">YourFault</a></h3>
+									<a href="images/yourFault00.jpg" rel="yourFault" class="fancybox" style="display:none" title = "A list of recent earthquakes">test</a>
+									<a href="images/yourFault01.jpg" rel="yourFault" class="fancybox" style="display:none" title = "The map view of the earthquake">test</a>
+									<a href="images/yourFault02.jpg" rel="yourFault" class="fancybox" style="display:none" title = "The earthquake notification screen">test</a>
+									<h3><a href="#yourFaultInline" class="fancybox">YourFault</a></h3>
 									<p>Earthquake Monitoring Android app</p>
 								</article>
 							</div>
@@ -157,7 +157,7 @@
 										As the team lead for the project, I:<br/ >
 										Delegated work between the team members<br/ >
 										Modeled and assembled all exterior casing of the engine (excluding rear gearbox casing)<br/ >
-										Designed the interior parts of the cylinders, including the piston assembly, impeller and rocker valves<br/ >
+										Designed the interior parts of the cylinders, including the piston assembly, impeller and rocker valves
 										</p>
 
 									</div>
@@ -165,15 +165,32 @@
 									<a href="images/engine01.jpg" rel="engine" class="fancybox" style="display:none" title = "Top View showing full engine assembly with stand">test</a>
 									<a href="images/engine02.jpg" rel="engine" class="fancybox" style="display:none" title = "Engine without casing, exposing the fully articulated internals">test</a>
 									<a href="images/engine03.jpg" rel="engine" class="fancybox" style="display:none" title = "Close-up showing internals of the piston assembly">test</a>
-									<h3><a href="#">Engine CAD Model</a></h3>
+									<h3><a href="#engineInline" class="fancybox">Engine CAD Model</a></h3>
 									<p>Wright J Whirlwind Radial Engine</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-									<h3><a href="#">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="#designathonInline" rel="designathon" class="fancybox image featured"><img src="images/designathon00-small.jpg" alt="" /></a>
+									<div id="designathonInline" style="width:500px;height:500px;overflow:no;display:none;">
+										<h3>UC Berkeley 3D Printing Desingathon</h3>
+										<a href="http://3dprint.com/58115/uc-berkeleys-3d-printing/" target="_blank">Spring Designathon Article</a><p>
+										I helped host UC Berkeley's fist 3D Printing Designathon in Spring 2015 and lead the university's second 3D Printing Designathon in Fall 2015. The Fall event challenged teams to design and 3D print a device that assists a person with a disability.<p>
+
+										As the Fall 2015 designathon lead, I:<br/ >
+										Increased participation from sixty to one hundred students<br/ >
+										Secured corporate sponsorship, facilities and equipment<br/ >
+										Coordinated a planning committee of twenty students<br/ >
+										Made final decisions on event direction, vision and branding
+										</p>
+
+									</div>
+									<a href="images/designathon00.jpg" rel="designathon" class="fancybox" style="display:none" title = "The beginning of the competition with about four of the teams shown">test</a>
+									<a href="images/designathon01.jpg" rel="designathon" class="fancybox" style="display:none" title = "Four of the event's twelve 3D printers which ran non-stop to print teams' designs">test</a>
+									<a href="images/designathon02.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning design, a smart prosthetic foot with sensors and a companion app">test</a>
+									<a href="images/designathon03.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning teams, including runner-ups and popular choice">test</a>
+									<h3><a href="#designathonInline" class="fancybox">3D Printing Designathon</a></h3>
+									<p>UC Berkeley 3D Printing Competition</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
