--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#designathonInline" rel="designathon" class="fancybox image featured"><img src="images/designathon00-small.jpg" alt="" /></a>
+									<a href="#designathonInline" rel="designathon" class="fancybox image featured"><img src="images/engine00-small.jpg" alt="" /></a>
 									<div id="designathonInline" style="width:500px;height:500px;overflow:no;display:none;">
 										<h3>UC Berkeley 3D Printing Desingathon</h3>
 										<a href="http://3dprint.com/58115/uc-berkeleys-3d-printing/" target="_blank">Spring Designathon Article</a><p>
