the .jpgs were all caps....>:|

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#designathonInline" rel="designathon" class="fancybox image featured"><img src="images/designathon00a-small.jpg" alt="" /></a>
+									<a href="#designathonInline" rel="designathon" class="fancybox image featured"><img src="images/designathon00-small.jpg" alt="" /></a>
 									<div id="designathonInline" style="width:500px;height:500px;overflow:no;display:none;">
 										<h3>UC Berkeley 3D Printing Desingathon</h3>
 										<a href="http://3dprint.com/58115/uc-berkeleys-3d-printing/" target="_blank">Spring Designathon Article</a><p>
@@ -185,10 +185,10 @@
 										</p>
 
 									</div>
-									<a href="images/designathon00a.jpg" rel="designathon" class="fancybox" style="display:none" title = "The beginning of the competition with about four of the teams shown">test</a>
-									<a href="images/designathon01a.jpg" rel="designathon" class="fancybox" style="display:none" title = "Four of the event's twelve 3D printers which ran non-stop to print teams' designs">test</a>
-									<a href="images/designathon02a.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning design, a smart prosthetic foot with sensors and a companion app">test</a>
-									<a href="images/designathon03a.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning teams, including runner-ups and popular choice">test</a>
+									<a href="images/designathon00.jpg" rel="designathon" class="fancybox" style="display:none" title = "The beginning of the competition with about four of the teams shown">test</a>
+									<a href="images/designathon01.jpg" rel="designathon" class="fancybox" style="display:none" title = "Four of the event's twelve 3D printers which ran non-stop to print teams' designs">test</a>
+									<a href="images/designathon02.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning design, a smart prosthetic foot with sensors and a companion app">test</a>
+									<a href="images/designathon03.jpg" rel="designathon" class="fancybox" style="display:none" title = "The winning teams, including runner-ups and popular choice">test</a>
 									<h3><a href="#designathonInline" class="fancybox">3D Printing Designathon</a></h3>
 									<p>UC Berkeley 3D Printing Competition</p>
 								</article>
