Added lots of text content and fixed icons

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Casey Rogers</strong>.</h1>
 							</header>
-							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.</p>
+							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.<br/ >
+							I am searching for a full-time software engineering position.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -57,35 +58,34 @@
 				<article id="work">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>I take pride in my wide technical experience and well-developed interpersonal skills.</p>
 					</header>
 					<div class="container">
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-comments-o"></span>
+									<span class="icon featured fa-code"></span>
 									<h3>Computer Science</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<p>From Android apps to 3D printable sculpture generators, I am prepared for any programming challenge!</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-camera-retro"></span>
+									<span class="icon featured fa-cube"></span>
 									<h3>3D Design</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<p>Through extensive experience working on personal and professional projects, I have mastered CAD design!</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-thumbs-o-up"></span>
+									<span class="icon featured fa-users"></span>
 									<h3>Leadership</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<p>With a strong backgroud in teaching, tutoring and organizing events, I have developed a passion for collaboration!</p>
 								</section>
 							</div>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
 					</footer>
 				</article>
@@ -96,7 +96,7 @@
 				<article id="portfolio">
 					<header>
 						<h2>Here’s some stuff I worked on recently.</h2>
-						<p>The following are some examples of my experience with programming, 3D design and leadership.</p>
+						<p>I work hard on the personal, professional and academic projects the drive my passions.</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -203,7 +203,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
@@ -214,7 +213,7 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
+						<p>Leave me a message and I'll get back to you as soon as possible.</p>
 					</header>
 					<div>
 						<div class="row">
