added 'opportunities' buzzword on suggestion by Garret Kurteff

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<h1>Hi. I'm <strong>Casey Rogers</strong>.</h1>
 							</header>
 							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.<br/ >
-							I am searching for a full-time software engineering position.</p>
+							I am searching for a full-time software engineering opportunities.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
