--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 					</header>
 					<div>
 						<div class="row">
-							<div class="12u">
-								<form method="post" action="#">
+							<div class="12u" id="form-wrap">
+								<form method="post" action="contact.php">
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
@@ -263,7 +263,7 @@
 										<div class="row 200%">
 											<div class="12u">
 												<ul class="actions">
-													<li><input type="submit" value="Send Message" /></li>
+													<li><input type="submit" value="Send Message"/></li>
 													<li><input type="reset" value="Clear Form" class="alt" /></li>
 												</ul>
 											</div>
