giving up on contact form, added mailto link

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Leave me a message and I'll get back to you as soon as possible.</p>
+						<p>Leave me a message at <a href="mailto:caseycrogers@berkeley.edu" target="_top">caseycrogers@berkeley.edu</a> and I'll get back to you as soon as possible.</p>
 					</header>
 					<div>
-						<div class="row">
+						<div class="row" style = "display:none">
 							<div class="12u" id="form-wrap">
 								<form method="post" action="contact.php">
 									<div>
