gave up on mailto link

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Leave me a message at <a href="mailto:caseycrogers@berkeley.edu" target="_top">caseycrogers@berkeley.edu</a> and I'll get back to you as soon as possible.</p>
+						<p>Leave me a message at caseycrogers@berkeley.edu and I'll get back to you as soon as possible.</p>
 					</header>
 					<div>
 						<div class="row" style = "display:none">
