--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Leave me a message at caseycrogers@berkeley.edu and I'll get back to you as soon as possible.</p>
+						<h2>I look forward to hearing from you!</h2>
+						<p>caseycrogers@berkeley.edu<br/>707-272-2516</p>
 					</header>
 					<div>
 						<div class="row" style = "display:none">
