--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/camera00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/main01.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
