--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 								<h1>Hi. I'm <strong>Casey Rogers</strong>.</h1>
 							</header>
 							<p>I'm a UC Berkeley <strong>Computer Science</strong> and <strong>Economics</strong> double major with a passion for creative work and analytical problem solving.<br/ >
-							I am looking for full-time software engineering opportunities.</p>
-							<a href="#work" class="button big scrolly">Learn about what I do</a>
+							I am interested in full-time software engineering opportunities.</p>
+							<a href="#work" style="display:none" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
 				</article>
@@ -86,7 +86,7 @@
 						</div>
 					</div>
 					<footer>
-						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
+						<a href="#portfolio" style="display:none" class="button big scrolly">See some of my recent work</a>
 					</footer>
 				</article>
 			</div>
@@ -225,7 +225,7 @@
 						</div>
 					</div>
 					<footer>
-						<a href="#contact" class="button big scrolly">Get in touch with me</a>
+						<a href="#contact" style="display:none" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
 			</div>
