trying to fix open graph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Casey C. Rogers</title>
         <meta property="og:title" content="Casey C. Rogers">
-        <meta property="og:image" content="images/main01.jpg">
+        <meta property="og:image" content="www.caseycrogers.com/images/main01.jpg">
 		<meta property="og:description" content="I'm a UC Berkeley Computer Science and Economics double major with a passion for creative work and analytical problem solving.
 		Click here to see my work!" />
 		<meta charset="utf-8" />
