--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<article id="portfolio">
 					<header>
 						<h2>Here’s some stuff I worked on recently.</h2>
-						<p>I work hard on the personal, professional and academic projects the drive my passions.</p>
+						<p>I work hard on the personal, professional and academic projects that drive my passions.</p>
 					</header>
 					<div class="container">
 						<div class="row">
